sea-query-derive/tests/compile-fail/enum_def/enum.rs
use sea_query_derive::enum_def;

#[enum_def]
enum Hello {
    Name,
}

fn main() {}
