sea-query-derive/tests/compile-fail/enum_def/enum.stderr
error: #[enum_def] can only be used on non-tuple structs
 --> tests/compile-fail/enum_def/enum.rs:4:1
  |
4 | enum Hello {
  | ^^^^
